--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -10638,7 +10638,8 @@ zip.file("_micCal.txt", micCal);
       }
     }
     async function align4system(ind1, ind2, start=20, end=250, ppo=96) {
-      let isInverted = false, isPossible = false, requiredDelay = Infinity, bestFreq = NaN, maxSum = -Infinity;
+      const maxSumArray = await getMaxSumArray(ind1, ind2, start, end, ppo);
+      let isInverted = false, isPossible = false, requiredDelay = Infinity, bestFreq = NaN, minRmsError = Infinity;
       let loDelay = maxNegative;
       let hiDelay = maxPositive;
       let tempLo = 0; let tempHi = 0;
@@ -10665,9 +10666,9 @@ zip.file("_micCal.txt", micCal);
 
         const tempSum = await fetchAlign(`aligned-frequency-response?smoothing=1%2F48&ppo=${ppo}`);
         const tempSumArray = response2array(tempSum, start, end);
-        let magSum = tempSumArray.reduce((a, b) => a + b, 0);
-        if (maxSum < magSum) {
-          maxSum = magSum;
+        const rmsError = calculateRMSError(tempSumArray, maxSumArray);
+        if (rmsError < minRmsError) {
+          minRmsError = rmsError;
           bestFreq = checkFreq;
           isPossible = true;
           requiredDelay = delayB;
