--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -226,7 +226,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1 Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">custom mj</span></h2>
+  <h2>A1 Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -308,7 +308,7 @@
     let msecMin, msecMax, invertSub = [], msecMinSub = Infinity, msecMaxSub = -Infinity, previousDelay = null;
 
     function extractAdy(event) {
-      console.info("Initialising A1 Evo custom mj...");
+      console.info("Initialising A1 Evo MJ Custom...");
       updateCheckboxStates();
       const file = event.target.files[0];
       fileName = file.name;
