--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -10440,7 +10440,7 @@ zip.file("_micCal.txt", micCal);
       }
       return { alignmentResults, finalIndex: sumIndex };
     }
-    async function tectonic(start=20, end=100, ppo=96) {
+    async function tectonic(start=20, end=120, ppo=96) {
       let isPossibleI = false, requiredDelayI = NaN, isInverted = false;
       let maxSubVolume = 0, minSubVolume = 0;
       for (let i = nSpeakers; i <= (nSpeakers + numSub - 1); i++) {
@@ -10574,8 +10574,8 @@ zip.file("_micCal.txt", micCal);
       let magSum = rpArray.reduce((acc, val) => acc + val - 75.0, 0);
       return magSum / calculateSTD(rpArray);
     }
-    async function getSubwooferTrim(noM, start=20, end=100, ppo=96) {
-      if (bassMode === "Directional") { start=30, end=80; } // helps if different subs have varying bandwidths
+    async function getSubwooferTrim(noM, start=20, end=120, ppo=96) {
+      if (bassMode === "Directional") { start=30, end=80; } // more accurate for level matching subs
       const targetArray = response2array(targetResponse, start, end);
       const targetSPL = targetArray.reduce((acc, val) => acc + val, 0) / targetArray.length;
       const freqResponse = await fetchSafe(`frequency-response?smoothing=Var&ppo=${ppo}`, noM);
@@ -10594,7 +10594,7 @@ zip.file("_micCal.txt", micCal);
       const offset = targetSPL - spArraySPL;
       return Math.round(offset * 2) / 2;
     }
-    async function getMaxSumArray(ind1, ind2, start=20, end=100, ppo=96) {
+    async function getMaxSumArray(ind1, ind2, start=20, end=120, ppo=96) {
       let maxSumArray = [];
       const ind1FreqResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=${ppo}`, ind1);
       const ind1Array = response2array(ind1FreqResponse, start, end);
@@ -10674,7 +10674,7 @@ zip.file("_micCal.txt", micCal);
       }
       return [isPossible, requiredDelay, isInverted];
     }
-    async function alignMsub(ind1, ind2, loDelay, hiDelay, start=20, end=100, ppo=96) {
+    async function alignMsub(ind1, ind2, loDelay, hiDelay, start=20, end=120, ppo=96) {
       const maxSumArray = await getMaxSumArray(ind1, ind2, start, end, ppo);
       let isInverted = false, isPossible = false, requiredDelay = NaN, sumIndex = null, bestFreq = NaN, minRmsError = Infinity;
       await postSafe("http://localhost:4735/alignment-tool/index-a", ind1, "selected as measurement A");
