added more details to subwoofer log messages

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -10212,6 +10212,9 @@ zip.file("_micCal.txt", micCal);
           console.info(`${commandId[i]} - distance: ${customDistance[i].toFixed(2)}m`);
         }
       }
+      if (swChannelCount > 1 && invertSub.every(isInv => isInv === true)) {
+        console.warn(`You will need to switch polarity of EACH of your ${swChannelCount} subwoofers!`);
+      }
       let delay0 = -Infinity;
       for (i = nSpeakers; i <= nSpeakers + numSub - 1; i++) {
         if (customDistance[i] > delay0) {
@@ -29423,8 +29426,8 @@ zip.file("_micCal.txt", micCal);
         spSum = Math.round(spSum * 2) / 2;
         customLevel[i] += spSum;
         if (customLevel[i] < -12) { customLevel[i] = -12; overLimit = true; }
-        if (overLimit) { console.warn(`${commandId[i]} could not be fully compensated by ${spSum}dB for auto-leveling! Decrease gain of this speaker before next Audyssey measurement.`); }
-        if (!overLimit && spSum != 0.0) { console.info(`${commandId[i]} - compensated by: ${spSum}dB`); }
+        if (overLimit) { console.warn(`${commandId[i]} could not be fully compensated by ${spSum}dB for auto-leveling! Trim maxed out at -12dB. Decrease gain of this speaker before next Audyssey measurement.`); }
+        if (!overLimit && spSum != 0.0) { console.info(`${commandId[i]} trim - compensated by: ${spSum}dB: ${customLevel[i] - spSum}dB → ${customLevel[i]}dB`); }
         const customTargetCurvePoints = fltArray.map(point => `{${point[0]}, ${point[1]}}`);
         const thisChannel = jsonData.detectedChannels.find(channel => channel.commandId === commandId[i]);
         thisChannel.customTargetCurvePoints = customTargetCurvePoints;
@@ -29466,8 +29469,8 @@ zip.file("_micCal.txt", micCal);
           channel.customDistance = Math.round(parseFloat(customDistanceValue) * 100) / 100;
           customLevelValue += spSum;
           if (customLevelValue < -12) { customLevelValue = -12; overLimit = true; }
-          if (overLimit) {console.warn(`${channel.commandId} could not be fully compensated by ${spSum}dB for auto-leveling! Decrease gain of this sub before next Audyssey measurement.`);}
-          if (!overLimit && spSum != 0.0) { console.info(`${channel.commandId} - compensated by: ${spSum}dB`); }
+          if (overLimit) {console.warn(`${channel.commandId} could not be fully compensated by ${spSum}dB for auto-leveling! Trim maxed out at -12dB. Decrease gain of this subwoofer before next Audyssey measurement.`);}
+          if (!overLimit && spSum != 0.0) { console.info(`${channel.commandId} trim - compensated by: ${spSum}dB: ${customLevelValue - spSum}dB → ${customLevelValue}dB`); }
           channel.customLevel = customLevelValue.toFixed(1);
           channel.frequencyRangeRolloff = 250;
           if (numSub > 1) { k++ };
